--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
         为了简化代码逻辑，目前只会寻找首页第一屏的微信用户，即如果用户聊天记录不在最上面会找不到；为了成功拨打，请使用微信的“置顶聊天”功能（在微信首页长按聊天记录弹出菜单中可以看到）。\n
         设置完后，您可以测试功能是否可用。确定可用时可以通过添加桌面快捷方式和点击“设置完成”。\n
         因为过桌面快捷方式目前用了原生的功能，国内的各种Rom可能无法兼容（成功会有提示，没有就是添加失败了）。\n
-        通过设置完成，下次进入App会直接显示“一键微信电话”按钮。这个我特意放大了字体，应该非常非常明显了。
+        通过设置完成，下次进入App会直接显示“一键微信电话”按钮。这个我特意放大了字体，应该非常非常明显了。\n
+        PS：MIUI上发现开启了无障碍在App结束后会收回权限，导致功能不能用。解决方法是打开自启动权限......我能怎么办？我也很无奈啊。
     </string>
 </resources>
