删除没用的布局.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">常聊助手</string>
-    <string name="accessibility_desc">一键微信电话，使用无障碍模式，实现一键直接跳转到微信找到对应用户拨打语音或视频电话。\nApp并不会使用这个功能做其他操作，而且App也不会进行联网，请放下使用。</string>
+    <string name="accessibility_desc">一键微信电话，使用无障碍模式，实现一键直接跳转到微信找到对应用户拨打语音或视频电话。\nApp并不会使用这个功能做其他操作，请放下使用。</string>
     <string name="help_text">使用说明:\n一键微信电话使用Android的无障碍模式，自动拨打设置好的用户昵称的微信语音或视频电话。为了实现这一点，需要打开无障碍功能开关。\n
         为了简化代码逻辑，目前只会寻找首页第一屏的微信用户，即如果用户聊天记录不在最上面会找不到；为了成功拨打，请使用微信的“置顶聊天”功能（在微信首页长按聊天记录弹出菜单中可以看到）。\n
         设置完后，您可以测试功能是否可用。确定可用时可以通过添加桌面快捷方式和点击“设置完成”。\n
         因为过桌面快捷方式目前用了原生的功能，国内的各种Rom可能无法兼容（成功会有提示，没有就是添加失败了）。\n
-        通过设置完成，下次进入App会直接显示“一键微信电话”按钮。这个我特意放大了字体，应该非常非常明显了。\n
-        PS：MIUI上发现开启了无障碍在App结束后会收回权限，导致功能不能用。解决方法是打开自启动权限......我能怎么办？我也很无奈啊。
+        PS：MIUI上发现开启了无障碍在App结束后会收回权限，导致功能不能用。解决方法是打开自启动权。其他手机可能也存在此问题。为了确保使用，......我能怎么办？我也很无奈啊。
     </string>
 </resources>
